--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(subt_solution_launch)
 find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   message_filters
+  pcl_conversions
+  pcl_ros
   roscpp
   sensor_msgs
   tf2_ros
@@ -24,6 +26,27 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
+add_executable(base_link_flattener
+  src/base_link_costmap_projector.cpp
+)
+
+add_executable(point_cloud_filter
+  src/pc_filter.cpp
+)
+
+target_link_libraries(base_link_flattener
+  ${catkin_LIBRARIES}
+)
+
+target_link_libraries(point_cloud_filter
+  ${catkin_LIBRARIES}
+)
+
+install(TARGETS
+  base_link_flattener
+  point_cloud_filter
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 install(DIRECTORY launch/
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
