--- a/package.xml
+++ b/package.xml
@@ -20,4 +20,10 @@
   <depend>subt_ign</depend>
   <depend>subt_msgs</depend>
   <depend>tf2_ros</depend>
+  <depend>pcl_conversions</depend>
+  <depend>pcl_ros</depend>
+  <depend>move_base</depend>
+  <depend>dwa_local_planner</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>tf2_sensor_msgs</depend>
 </package>
