--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,7 @@
   <depend>pcl_conversions</depend>
   <depend>pcl_ros</depend>
   <depend>move_base</depend>
+  <depend>m-explore</depend>
   <depend>dwa_local_planner</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>tf2_sensor_msgs</depend>
