--- a/subt_solution_launch/config/move_base/costmap_global.yaml
+++ b/subt_solution_launch/config/move_base/costmap_global.yaml
@@ -1,9 +1,15 @@
 global_frame: X1/map
 rolling_window: true
 track_unknown_space: true
-width: 150.0
-height: 150.0
+width: 200.0
+height: 200.0
 
 plugins:
   - {name: obstacles_laser,         type: "costmap_2d::ObstacleLayer"}
   - {name: inflation,               type: "costmap_2d::InflationLayer"}
+
+inflation:
+  inflation_radius: 14.0
+  cost_scaling_factor: 5.0
+obstacle:
+  max_obstacle_height: 1
